# Penge

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .yamllint.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  alembic.ini  commitlint.config.cjs  compose.yaml  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  sitemap.xml
.github/: CHAT-HISTORY.MD  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adr.yml  bug.yml  chore.yml  config.yml  feature.yml
.github/agents/: implementer.agent.md  planner.agent.md
.github/instructions/: docs.instructions.md  migrations.instructions.md  python.instructions.md  sql-dbt.instructions.md  typescript.instructions.md
.github/workflows/: backup-roundtrip.yml  ci.yml  codeql.yml  dbt.yml  dependency-review.yml  docs.yml  ecb-fx.yml  mcp-evals.yml  release-please.yml  release.yml
analytics/returns/: index.html
api/: index.html  openapi.json
apps/api/: Containerfile
apps/mcp/: .gitignore  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts  vitest.evals.config.ts
apps/web/: Containerfile  index.html  package.json  tsconfig.json  vite.config.ts
architecture/: index.html
config/: nordnet-accounts.example.yaml
connectors/: index.html
connectors/abis/: index.html
connectors/ecb_fx/: index.html
connectors/evangelische-bank/: index.html
connectors/gls/: index.html
connectors/growney/: index.html
connectors/lunar/: index.html
connectors/manual/: index.html
connectors/nordnet/: index.html
connectors/pfa/: index.html
dbt/: dbt_project.yml  index.html  packages.yml  profiles.yml
dbt/tests/: mart_cashflow_daily__non_negative_components.sql  mart_cashflow_daily__unique_grain.sql  mart_net_worth_daily__monotonic_date_index.sql  mart_net_worth_daily__no_fx_gaps.sql  mart_net_worth_daily__unique_grain.sql  mart_position_value_daily__unique_grain.sql  mart_returns_daily__factor_positive.sql  mart_returns_daily__unique_grain.sql
decisions/: index.html
decisions/0001-self-hosted-postgres-duckdb-stack/: index.html
decisions/0002-custom-monorepo-over-off-the-shelf-pfm/: index.html
decisions/0003-hybrid-ingestion-psd2-and-csv-pdf/: index.html
decisions/0004-eur-and-dkk-shown-in-parallel/: index.html
decisions/0005-llm-access-via-mcp-only/: index.html
decisions/0006-trunk-based-conventional-commits-adrs/: index.html
decisions/0007-initial-relational-data-model/: index.html
decisions/0008-nordnet-account-modelling/: index.html
decisions/0009-abis-list-and-instrument-tax-treatment/: index.html
decisions/0010-sim-return-model/: index.html
decisions/0011-sim-cashflow-engine/: index.html
decisions/0012-sim-goal-model/: index.html
decisions/0013-sim-tax-overlay/: index.html
decisions/0014-sim-montecarlo-runner/: index.html
decisions/0015-sim-scenario-engine/: index.html
decisions/0016-tax-lot-tracker/: index.html
decisions/0017-lagerbeskatning-calculator/: index.html
decisions/0018-aktiesparekonto-handling/: index.html
decisions/0019-pal-skat-tracking/: index.html
decisions/0020-skat-report-generator/: index.html
decisions/0021-de-vorabpauschale/: index.html
decisions/0022-web-projection-dashboard/: index.html
decisions/0023-mcp-server-architecture/: index.html
decisions/0024-vault-layout/: index.html
decisions/0025-encrypted-backups/: index.html
decisions/0026-retire-gocardless-for-enable-banking/: index.html
decisions/0027-liquid-depot-simulation-model/: index.html
decisions/0027-self-hosted-actions-runner/: index.html
decisions/0028-sim-payout-model/: index.html
decisions/0029-dk-topskat-folkepension/: index.html
decisions/0030-sim-contribution-routing/: index.html
decisions/0031-sim-household-plan/: index.html
decisions/0032-household-real-estate-tax-context-source-assumptions/: index.html
decisions/0033-reporting-first-react-webui/: index.html
decisions/0034-application-container-images/: index.html
decisions/0035-fastapi-read-api/: index.html
decisions/0036-webui-frontend-stack/: index.html
decisions/0037-staged-import-sessions/: index.html
decisions/0038-import-mapping-suggestions-via-mcp/: index.html
decisions/0039-returns-engine-twr-mwr/: index.html
decisions/0040-in-app-enable-banking-consent-flow/: index.html
decisions/0041-connections-sync-history-window-fallback/: index.html
decisions/0042-nordnet-interest-suffix-fallback/: index.html
decisions/adr-template/: index.html
docs/: dbt.md  index.md  privacy.md  terms.md
docs/analytics/: returns.md
docs/api/: index.md  openapi.json
docs/architecture/: index.md
docs/connectors/: abis.md  ecb_fx.md  evangelische-bank.md  gls.md  gocardless.md  growney.md  index.md  lunar.md  manual.md  nordnet.md  pfa.md
docs/decisions/: 0001-self-hosted-postgres-duckdb-stack.md  0002-custom-monorepo-over-off-the-shelf-pfm.md  0003-hybrid-ingestion-psd2-and-csv-pdf.md  0004-eur-and-dkk-shown-in-parallel.md  0005-llm-access-via-mcp-only.md  0006-trunk-based-conventional-commits-adrs.md  0007-initial-relational-data-model.md  0008-nordnet-account-modelling.md  0009-abis-list-and-instrument-tax-treatment.md  0010-sim-return-model.md  0011-sim-cashflow-engine.md  0012-sim-goal-model.md  0013-sim-tax-overlay.md  0014-sim-montecarlo-runner.md  0015-sim-scenario-engine.md  0016-tax-lot-tracker.md  0017-lagerbeskatning-calculator.md  0018-aktiesparekonto-handling.md  0019-pal-skat-tracking.md  0020-skat-report-generator.md  0021-de-vorabpauschale.md  0022-web-projection-dashboard.md  0023-mcp-server-architecture.md  0024-vault-layout.md  0025-encrypted-backups.md  0027-self-hosted-actions-runner.md  (+19 more)
migrations/: env.py
privacy/: index.html
scripts/: backup.sh  lib_backup.sh  prune.sh  restore.sh  snapshot.sh
search/: search_index.json
terms/: index.html
tools/: generate_growney_fixture.py  generate_pfa_fixture.py  generate_vault_fixtures.py
(+428 files in other folders)
