[project]
name = "penge"
version = "0.0.0"
description = "Private personal-finance & FIRE-modeling platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "autoditac" }]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pre-commit>=4.0",
]
docs = [
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.7",
]
db = [
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]
http = [
  "httpx>=0.27",
  "pydantic>=2.7",
]
dbt = [
  # dbt-postgres pulls in a matching dbt-core. Allow 1.9.x and 1.10.x;
  # bump the floor when we adopt features that need a newer minor.
  "dbt-postgres>=1.9,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",          # pycodestyle / pyflakes
  "I",                    # isort
  "B",                    # bugbear
  "UP",                   # pyupgrade
  "SIM",                  # simplify
  "RUF",                  # ruff-specific
  "TID",                  # tidy imports
  "S",                    # bandit
  "PL",                   # pylint
]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
# Migrations are autogenerate-friendly scripts; don't penalise them for
# size, magic numbers, or the boilerplate alembic emits.
"migrations/**" = ["PLR0913", "PLR0915", "PLR2004", "S608"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# Alembic + SQLAlchemy 2.x have rich generic type stubs that --strict
# combined with --ignore-missing-imports doesn't cope with cleanly. The
# migration files are gated by the alembic-roundtrip CI job (real
# upgrade + downgrade against Postgres), which is a stronger correctness
# signal than mypy strict here.
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/penge"]

[project.scripts]
penge-ecb-fx = "penge.ingest.ecb_fx.__main__:main"
