[project]
name = "penge"
version = "0.0.0"
description = "Private personal-finance & FIRE-modeling platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "autoditac" }]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pre-commit>=4.0",
  "pandas-stubs>=2.2",
]
docs = [
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.7",
]
db = [
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]
http = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]
dbt = [
  # dbt-postgres pulls in a matching dbt-core. Allow 1.9.x and 1.10.x;
  # bump the floor when we adopt features that need a newer minor.
  "dbt-postgres>=1.9,<2.0",
]
web = [
  # Streamlit dashboard (issue #25). pandas is required by Streamlit's
  # native dataframe / chart helpers; plotly drives the time-series and
  # allocation charts. The DB driver is pulled in via the `db` group.
  "streamlit>=1.39",
  "pandas>=2.2",
  "plotly>=5.24",
]
prices = [
  # Instrument price loader (issue #22). yfinance pulls in pandas /
  # numpy transitively; we depend on the same `pandas` floor as the
  # `web` group so installing both groups stays consistent.
  "yfinance>=0.2.40",
  "pandas>=2.2",
]
manual = [
  # Manual-entry CLI (issue #20). typer wraps argparse with subcommand
  # ergonomics; sqlalchemy is pulled in via the `db` group at runtime.
  "typer>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",          # pycodestyle / pyflakes
  "I",                    # isort
  "B",                    # bugbear
  "UP",                   # pyupgrade
  "SIM",                  # simplify
  "RUF",                  # ruff-specific
  "TID",                  # tidy imports
  "S",                    # bandit
  "PL",                   # pylint
]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
# Migrations are autogenerate-friendly scripts; don't penalise them for
# size, magic numbers, or the boilerplate alembic emits.
"migrations/**" = ["PLR0913", "PLR0915", "PLR2004", "S608"]
# Streamlit apps are top-level scripts; magic numbers are common in
# chart layout. The DB query layer (penge.web.data) is still linted
# normally and uses parameterised SQLAlchemy `text()`.
"src/penge/web/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# Alembic + SQLAlchemy 2.x have rich generic type stubs that --strict
# combined with --ignore-missing-imports doesn't cope with cleanly. The
# migration files are gated by the alembic-roundtrip CI job (real
# upgrade + downgrade against Postgres), which is a stronger correctness
# signal than mypy strict here.
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

# Streamlit and Plotly do not ship strict-friendly stubs. The web layer
# is a thin presentation skeleton over typed data helpers; the typed
# data layer (`penge.web.data`, `penge.web.mask`) is still strict.
[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*", "plotly", "plotly.*"]
ignore_missing_imports = true

# yfinance ships no type stubs. pandas types are picked up via
# ``pandas-stubs`` in the dev group; we only need to silence yfinance
# here. The loader's pure pieces (resolve_yahoo_symbol, cross_check)
# remain strictly typed.
[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

# Typer's decorator typing trips ``untyped-decorator`` under --strict
# even though it ships stubs. The CLI surface in ``penge.manual`` is
# the only consumer.
[[tool.mypy.overrides]]
module = ["penge.manual.__main__"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/penge"]

[project.scripts]
penge-ecb-fx = "penge.ingest.ecb_fx.__main__:main"
penge-nordnet = "penge.ingest.nordnet.__main__:main"
penge-prices = "penge.ingest.prices.__main__:main"
penge-manual = "penge.manual.__main__:app"
penge-web = "penge.web.__main__:main"
