[project]
name = "penge"
version = "0.1.0"
description = "Private personal-finance & FIRE-modeling platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "autoditac" }]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pre-commit>=4.0",
  "pandas-stubs>=2.2",
  "hypothesis>=6.100",
  "types-pyyaml>=6.0.12.20260510",
]
docs = [
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.7",
]
db = [
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]
http = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]
dbt = [
  # dbt-postgres pulls in a matching dbt-core. Allow 1.9.x and 1.10.x;
  # bump the floor when we adopt features that need a newer minor.
  "dbt-postgres>=1.9,<2.0",
]
web = [
  # Streamlit dashboard (issue #25). pandas is required by Streamlit's
  # native dataframe / chart helpers; plotly drives the time-series and
  # allocation charts. The DB driver is pulled in via the `db` group.
  "streamlit>=1.39",
  "pandas>=2.2",
  "plotly>=5.24",
]
prices = [
  # Instrument price loader (issue #22). yfinance pulls in pandas /
  # numpy transitively; we depend on the same `pandas` floor as the
  # `web` group so installing both groups stays consistent.
  "yfinance>=0.2.40",
  "pandas>=2.2",
]
manual = [
  # Manual-entry CLI (issue #20). typer wraps argparse with subcommand
  # ergonomics; sqlalchemy is pulled in via the `db` group at runtime.
  "typer>=0.12",
]
enablebanking = [
  # Enable Banking PSD2 connector backbone (issues #14 GLS, #15 EBank,
  # #16 Lunar). pyjwt[crypto] pulls in cryptography for RS256 signing.
  # httpx and pydantic come from the `http` group at runtime.
  "pyjwt[crypto]>=2.8",
]
parsers = [
  # PDF parsing for the Growney / Sutor Bank Depotauszug connector
  # (issue #19) and PFA pension Pensionsoversigt (issue #18).
  # pdfplumber's text + table extractors are deterministic against
  # pinned PDF inputs. reportlab is only used to generate the
  # synthetic test fixtures under tests/ingest/{growney,pfa}/fixtures/.
  "pdfplumber>=0.11",
  "reportlab>=4.2",
]
ocr = [
  # OCR fallback for the PFA pension connector (issue #18). Used only
  # when the embedded-text path fails (scanned / image-only PDFs).
  # pytesseract is a thin wrapper around the system tesseract binary;
  # the Tesseract DA + DE language packs must be installed on the host
  # (e.g. `apt install tesseract-ocr-dan tesseract-ocr-deu`). pdf2image
  # rasterises pages via poppler-utils.
  "pytesseract>=0.3.10",
  "pdf2image>=1.17",
  "Pillow>=10.4",
]
vault = [
  # Document vault inbox watcher (issue #41). watchdog drives the
  # filesystem observer; pytesseract / pdf2image / Pillow back the
  # OCR pipeline (Tesseract DA+DE+EN, poppler-utils for rasterisation).
  # pdfplumber comes from the `parsers` group when embedded text is
  # available; it is imported lazily by penge.vault.ocr so installs
  # without it still work via the OCR fallback path. PyYAML loads the
  # rule-based classifier config (issue #42).
  "watchdog>=6.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17",
  "Pillow>=10.4",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]
sim = [
  # Simulation engine: historical-bootstrap return model (issue #26),
  # cashflow engine (#27), tax overlay (#28), Monte-Carlo runner (#31),
  # scenario engine (#32), goal model (#30). numpy drives all numeric
  # work; pydantic validates user-facing configs at the I/O boundary.
  "numpy>=2.0",
  "pydantic>=2.7",
]
ops = [
  # Operational glue: outbound heartbeats to Uptime Kuma push monitors
  # and Sentry error reporting for ingestion entry points (issue #52).
  # httpx is the same client we use for all other outbound HTTP and is
  # already pinned in the `http` group; the duplicate floor here keeps
  # `uv sync --group ops` self-contained without forcing every consumer
  # to also pull `http`.
  "httpx>=0.27",
  "sentry-sdk>=2.59.0",
]
report = [
  # Monthly automated PDF + Markdown report (issue #50). matplotlib
  # renders the static PNG charts embedded into both the Markdown and
  # PDF outputs (no interactive runtime needed). reportlab is reused
  # from the `parsers` group as the pure-Python PDF backend so we do
  # not add WeasyPrint / its native deps (cairo, pango, gdk-pixbuf).
  # pandas comes from the `web` / `prices` groups; the report loader
  # uses it to slice the dbt marts.
  "matplotlib>=3.9",
  "reportlab>=4.2",
  "pandas>=2.2",
]
api = [
  # FastAPI read API for the WebUI (issue #202, ADR-0035). FastAPI is
  # the HTTP layer over the dbt marts; uvicorn serves it. Pydantic and
  # the DB driver come from the `http` / `db` groups at runtime.
  "fastapi>=0.115",
  "uvicorn>=0.32",
  # Multipart parsing for the staged-import upload endpoint (issue
  # #207, ADR-0037). FastAPI has no built-in multipart parser and no
  # existing dependency provides one; this is the library FastAPI
  # itself requires for UploadFile/Form support.
  "python-multipart>=0.0.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",          # pycodestyle / pyflakes
  "I",                    # isort
  "B",                    # bugbear
  "UP",                   # pyupgrade
  "SIM",                  # simplify
  "RUF",                  # ruff-specific
  "TID",                  # tidy imports
  "S",                    # bandit
  "PL",                   # pylint
]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
# tests/scripts/ shells out to the backup scripts on purpose: the
# fixed-PATH `bash`/`psql`/`age-keygen` invocations are the unit under
# test, not a code-injection risk. The synthetic `DROP/CREATE SCHEMA`
# strings are likewise hand-built test scaffolding (S608).
"tests/scripts/**" = ["S101", "PLR2004", "S603", "S607", "S608"]
# Migrations are autogenerate-friendly scripts; don't penalise them for
# size, magic numbers, or the boilerplate alembic emits.
"migrations/**" = ["PLR0913", "PLR0915", "PLR2004", "S608"]
# Streamlit apps are top-level scripts; magic numbers are common in
# chart layout. The DB query layer (penge.web.data) is still linted
# normally and uses parameterised SQLAlchemy `text()`.
"src/penge/web/**" = ["PLR2004"]
# The API's SQL constants are assembled from module-level fragments via
# f-strings (shared filter clause, closed mart-name tuple). All values
# are bound parameters via SQLAlchemy text(); no request input is ever
# interpolated, so S608's string-construction heuristic is a false
# positive here.
"src/penge/api/data.py" = ["S608"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# Alembic + SQLAlchemy 2.x have rich generic type stubs that --strict
# combined with --ignore-missing-imports doesn't cope with cleanly. The
# migration files are gated by the alembic-roundtrip CI job (real
# upgrade + downgrade against Postgres), which is a stronger correctness
# signal than mypy strict here.
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

# Streamlit and Plotly do not ship strict-friendly stubs. The web layer
# is a thin presentation skeleton over typed data helpers; the typed
# data layer (`penge.web.data`, `penge.web.mask`) is still strict.
[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*", "plotly", "plotly.*"]
ignore_missing_imports = true

# yfinance ships no type stubs. pandas types are picked up via
# ``pandas-stubs`` in the dev group; we only need to silence yfinance
# here. The loader's pure pieces (resolve_yahoo_symbol, cross_check)
# remain strictly typed.
[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

# matplotlib and reportlab ship no first-party strict-friendly stubs.
# The report generator wraps them in a thin typed facade
# (penge.ops.report.charts / penge.ops.report.pdf); the helpers around
# them stay strictly typed.
[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*", "reportlab", "reportlab.*"]
ignore_missing_imports = true

# Typer's decorator typing trips ``untyped-decorator`` under --strict
# even though it ships stubs. The CLI surface in ``penge.manual`` is
# the only consumer.
[[tool.mypy.overrides]]
module = ["penge.manual.__main__"]
disallow_untyped_decorators = false

# Hypothesis decorators (``@given``, ``@settings``) are reported as
# untyped under --strict even though hypothesis ships stubs. The
# strategies themselves are still typed, so the property-test bodies
# remain meaningfully checked.
[[tool.mypy.overrides]]
module = [
  "tests.analytics.test_returns",
  "tests.sim.test_returns",
  "tests.tax.test_lager",
  "tests.tax.test_lots",
]
disallow_untyped_decorators = false

# pytest's ``@pytest.mark.parametrize`` is reported as an untyped
# decorator under --strict (the body is still type-checked, only the
# decorator's signature is permissive). The classifier confusion-matrix
# tests rely heavily on parametrize.
[[tool.mypy.overrides]]
module = [
  "tests.vault.test_classifier",
  "tests.ops.test_sentry",
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/penge"]

[project.scripts]
penge-ecb-fx = "penge.ingest.ecb_fx.__main__:main"
penge-nordnet = "penge.ingest.nordnet.__main__:main"
penge-prices = "penge.ingest.prices.__main__:main"
penge-manual = "penge.manual.__main__:app"
penge-web = "penge.web.__main__:main"
penge-gls = "penge.ingest.gls.__main__:main"
penge-ebank = "penge.ingest.ebank.__main__:main"
penge-lunar = "penge.ingest.lunar.__main__:main"
penge-growney = "penge.ingest.growney.__main__:main"
penge-pfa = "penge.ingest.pfa.__main__:main"
penge-abis = "penge.tax.abis.__main__:main"
penge-tax-year = "penge.tax.cli:main"
penge-vault = "penge.vault.__main__:main"
penge-api = "penge.api.__main__:main"
